mushroom picker complete

--- a/src/components/Mushroom/Mushroom.scss
+++ b/src/components/Mushroom/Mushroom.scss
@@ -1,1 +1,4 @@
-
+.trippy-mushroom {
+  background: rgba(76, 251, 63, 0.514);
+  background: linear-gradient(144deg, rgba(77,251,63,1) 0%, rgba(252,70,70,1) 34%, rgba(70,102,252,1) 62%, rgba(147,139,181,1) 76%, rgba(251,236,66,1) 100%);
+}
