--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,2 @@
 $favColor: lightseagreen;
+$favGradient: linear-gradient(90deg, rgba(77,251,63,1) 0%, rgba(252,70,70,1) 34%, rgba(70,102,252,1) 62%, rgba(147,139,181,1) 76%, rgba(251,236,66,1) 100%);
