--- a/src/components/Mushroom/Mushroom.scss
+++ b/src/components/Mushroom/Mushroom.scss
@@ -1,4 +1,20 @@
 .trippy-mushroom {
-  background: rgba(76, 251, 63, 0.514);
+  background: rgba(76, 251, 63, 0.329);
   background: linear-gradient(144deg, rgba(77,251,63,1) 0%, rgba(252,70,70,1) 34%, rgba(70,102,252,1) 62%, rgba(147,139,181,1) 76%, rgba(251,236,66,1) 100%);
+}
+
+.redcap-mushroom {
+  background: linear-gradient(144deg, rgba(255,0,0,1) 11%, rgba(213,18,18,1) 33%, rgba(213,18,18,1) 66%, rgba(255,0,0,1) 90%);
+}
+
+.webcap-mushroom {
+  background: linear-gradient(144deg, rgba(198,39,0,1) 11%, rgba(179,65,0,1) 33%, rgba(179,65,0,1) 66%, rgba(198,39,0,1) 90%);
+}
+
+.jackolantern-mushroom {
+  background: linear-gradient(144deg, rgba(255,35,35,1) 11%, rgba(255,91,21,1) 33%, rgba(255,118,21,1) 66%, rgba(255,35,35,1) 90%);
+}
+
+.death-mushroom {
+  background: linear-gradient(144deg, rgba(38,35,35,1) 11%, rgba(85,10,10,1) 33%, rgba(66,27,27,1) 66%, rgba(38,35,35,1) 90%);
 }
