--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,3 @@
 $favColor: lightseagreen;
-$favGradient: linear-gradient(90deg, rgba(77,251,63,1) 0%, rgba(252,70,70,1) 34%, rgba(70,102,252,1) 62%, rgba(147,139,181,1) 76%, rgba(251,236,66,1) 100%);
+$favGradient: linear-gradient(266deg, rgba(67,113,158,1) 0%, rgba(52,141,163,1) 26%, rgba(60,171,165,1) 51%, rgba(50,145,164,1) 78%, rgba(67,113,158,1) 100%);
+$trippyGradient: linear-gradient(90deg, rgba(77,251,63,1) 0%, rgba(252,70,70,1) 34%, rgba(70,102,252,1) 62%, rgba(147,139,181,1) 76%, rgba(251,236,66,1) 100%);
